# confet

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: record-demos.sh
src/: canvas.rs  config.rs  main.rs  particle.rs  types.rs
src/platform/: linux.rs  macos.rs  mod.rs
