[package]
name = "confet"
version = "0.1.3"
edition = "2021"
description = "GPU-rendered confetti overlay"
license = "MIT"
repository = "https://github.com/zcag/confet"
keywords = ["confetti", "gtk4", "overlay", "particles"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/confet-{ target }.tar.gz"
bin-dir = "confet-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[[bin]]
name = "confet"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
rand = "0.8"
cairo-rs = "0.20"
graphene-rs = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4-layer-shell = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
